# MCP_CLIENT_-_FRONTEND

./: README.md  fastapi_backend.py  fastapi_frontend.py  pyproject.toml
client/: app.py  mcp_client.py  simple_tools.py
